# teensy-x86-midi-stubs

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: libmidi.yml  libmidi_rtmidi.yml
cmake/: teensy_x86_midi_stubs.cmake.in  teensy_x86_midi_stubs_rtmidi.cmake.in
extras/generic/src/: CMakeLists.txt  GenericMIDI.h  GenericTransport.h
extras/rtmidi/: CMakeLists.txt  install.sh
extras/rtmidi/examples/basic/: CMakeLists.txt  basic.cpp
extras/rtmidi/src/: CMakeLists.txt  RtMidiMIDI.h  RtMidiTransport.h
src/: CMakeLists.txt  MIDI.h  midi_Defs.h  midi_Message.h  midi_Platform.h  midi_Settings.h
